--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@prisma/client": "^4.16.1",
+    "@stripe/stripe-js": "^1.54.1",
+    "axios": "^1.4.0",
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
     "eslint": "8.43.0",
@@ -19,7 +21,8 @@
     "prisma": "^4.16.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.10.1"
+    "react-icons": "^4.10.1",
+    "stripe": "^12.11.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
